# HabitTracker

./: .gitignore  README.md  builder.config.json  create_test_data.py  dev_journal.md  pyproject.toml  requirements.txt  test_simple_api.py  test_uuid7.py
analytics/: admin.py  models.py  serializers.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  0002_initial.py
docs/: README.md  market_research.md  user_feedback_analysis.md
frontend/: App.tsx  FRONTEND_DOCS.md  README.md  SETUP.md  check-status.md  install-deps.bat  package-lock.json  package.json  start-app.bat  tsconfig.json
frontend/components/: AddGroupModal.tsx  AnalyticsScreen.tsx  CategoriesScreen.tsx  CreateHabitModal.tsx  DetailActionBar.tsx  GroupsScreen.tsx  HabitCalendar.tsx  HabitCard.tsx  HabitDetailScreen.tsx  HabitGrid.tsx  HabitsScreen.tsx  ProfileScreen.tsx  SettingsScreen.tsx  StatsScreen.tsx  index.ts
frontend/config/: api.ts  index.ts  theme.ts
frontend/constants/: appStyles.ts  colors.ts  goals.ts  icons.ts  index.ts  spacing.ts  theme.ts
frontend/context/: AppContext.tsx
frontend/hooks/: useAppLogic.ts  useAuth.ts  useHabits.ts  useNavigation.ts  useResponsive.ts
frontend/screens/: AnalyticsScreen.tsx  GroupsScreen.tsx  HabitDetailScreen.tsx  HabitsScreen.tsx  ProfileScreen.tsx  SettingsScreen.tsx  StatsScreen.tsx
habit_tracker/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
payments/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+110 files in other folders)
